changed navbar,about me

--- a/developer-portfolio-template/index.html
+++ b/developer-portfolio-template/index.html
@@ -37,7 +37,7 @@
     <!-- Nav Bar Start -->
     <div class="navbar navbar-expand-lg bg-light navbar-light">
       <div class="container-fluid">
-        <a href="index.html" class="navbar-brand">DevFolio</a>
+        <a href="index.html" class="navbar-brand"></a>
         <button
           type="button"
           class="navbar-toggler"
@@ -76,11 +76,10 @@
             <div class="hero-content">
               <div class="hero-text">
                 <p>I'm</p>
-                <h1>Kate Winslet</h1>
+                <h1>Hiruni Mudannayake</h1>
                 <h2></h2>
                 <div class="typed-text">
-                  Web Designer, Web Developer, Front End Developer, Apps
-                  Designer, Apps Developer
+                  Web Developer, Mobile Apps Developer
                 </div>
               </div>
               <div class="hero-btn">
@@ -91,13 +90,78 @@
           </div>
           <div class="col-sm-12 col-md-6 d-none d-md-block">
             <div class="hero-image">
-              <img src="img/hero.png" alt="Hero Image" />
+              <img src="img/me4.png" alt="Hero Image" />
             </div>
           </div>
         </div>
       </div>
     </div>
     <!-- Hero End -->
+
+    <!-- Service Start -->
+    <div class="service" id="service">
+      <div class="container">
+        <div
+          class="section-header text-center wow zoomIn"
+          data-wow-delay="0.1s"
+        >
+          <p>About Me</p>
+          <h2>Let me introduce myself</h2>
+        </div>
+        <p>
+          Hello, my name is Hiruni Mudannayake. I am a full-stack web developer
+          and mobile application developer. Check out my articles, React, React
+          Native and Flutter UI components. Feel free to take a look at my
+          latest projects on the web portfolio page.
+        </p>
+        <div class="row">
+          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.0s">
+            <div class="service-item">
+              <div class="service-icon">
+                <i class="fa fa-birthday-cake"></i>
+              </div>
+              <div class="service-text">
+                <h3>26 January 2000</h3>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.2s">
+            <div class="service-item">
+              <div class="service-icon">
+                <i class="fa fa-book"></i>
+              </div>
+              <div class="service-text">
+                <h3>
+                  B.Sc. (Hons) Degree in Information Technology Specializing
+                  Software Engineering
+                </h3>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.4s">
+            <div class="service-item">
+              <div class="service-icon">
+                <i class="fa fa-location-arrow"></i>
+              </div>
+              <div class="service-text">
+                <h3>Colombo, Sri Lanka</h3>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.6s">
+            <div class="service-item">
+              <div class="service-icon">
+                <i class="fa fa-phone"></i>
+              </div>
+              <div class="service-text">
+                <h3>+94 70 453 7222</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Service End -->
 
     <!-- About Start -->
     <div class="about wow fadeInUp" data-wow-delay="0.1s" id="about">
@@ -111,14 +175,16 @@
           <div class="col-lg-6">
             <div class="about-content">
               <div class="section-header text-left">
-                <p>Learn About Me</p>
-                <h2>10 Years Experience</h2>
+                <p>About Me</p>
+                <h2>Let me introduce myself</h2>
               </div>
               <div class="about-text">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Phasellus nec pretium mi. Curabitur facilisis ornare velit non
-                  vulputate. Aliquam metus tortor, auctor id gravida
+                  Hello, my name is Hiruni Mudannayake. I am a full-stack web
+                  developer and mobile application developer. Check out my
+                  articles, React and React Native, Flutter UI components. Feel
+                  free to take a look at my latest projects on the web portfolio
+                  page.
                 </p>
               </div>
               <div class="skills">
@@ -182,78 +248,6 @@
       </div>
     </div>
     <!-- About End -->
-
-    <!-- Service Start -->
-    <div class="service" id="service">
-      <div class="container">
-        <div
-          class="section-header text-center wow zoomIn"
-          data-wow-delay="0.1s"
-        >
-          <p>What I do</p>
-          <h2>Awesome Quality Services</h2>
-        </div>
-        <div class="row">
-          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.0s">
-            <div class="service-item">
-              <div class="service-icon">
-                <i class="fa fa-laptop"></i>
-              </div>
-              <div class="service-text">
-                <h3>Web Design</h3>
-                <p>
-                  Lorem ipsum dolor sit amet elit. Phase nec preti mi. Curabi
-                  facilis ornare velit non
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.2s">
-            <div class="service-item">
-              <div class="service-icon">
-                <i class="fa fa-laptop-code"></i>
-              </div>
-              <div class="service-text">
-                <h3>Web Development</h3>
-                <p>
-                  Lorem ipsum dolor sit amet elit. Phase nec preti mi. Curabi
-                  facilis ornare velit non
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.4s">
-            <div class="service-item">
-              <div class="service-icon">
-                <i class="fab fa-android"></i>
-              </div>
-              <div class="service-text">
-                <h3>Apps Design</h3>
-                <p>
-                  Lorem ipsum dolor sit amet elit. Phase nec preti mi. Curabi
-                  facilis ornare velit non
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.6s">
-            <div class="service-item">
-              <div class="service-icon">
-                <i class="fab fa-apple"></i>
-              </div>
-              <div class="service-text">
-                <h3>Apps Development</h3>
-                <p>
-                  Lorem ipsum dolor sit amet elit. Phase nec preti mi. Curabi
-                  facilis ornare velit non
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Service End -->
 
     <!-- Experience Start -->
     <div class="experience" id="experience">
