added social media section

--- a/developer-portfolio-template/index.html
+++ b/developer-portfolio-template/index.html
@@ -71,16 +71,8 @@
     <!-- Hero Start -->
     <div class="hero" id="home">
       <div class="container-fluid">
-        <div class="row align-items-center" style="margin-left: 950px; margin-top:-100px;margin-bottom: 100px;">
-          <div class="footer-info">
-            <div class="footer-social">
-              <a href=""><i class="fab fa-twitter" style="padding: 100px;size: 20px;"></i></a>
-              <a href="https://web.facebook.com/anushika.siriwardena/"><i class="fab fa-facebook-f"></i></a>
-              <a href=""><i class="fab fa-youtube"></i></a>
-              <a href=""><i class="fab fa-instagram"></i></a>
-              <a href=""><i class="fab fa-linkedin-in"></i></a>
-            </div>
-          </div>
+        <div class="row align-items-center" >
+          
           </div>
         <div class="row align-items-center">
           <div class="col-sm-12 col-md-6">
@@ -94,9 +86,26 @@
                 </div>
               </div>
               <div class="hero-btn">
-                <a class="btn" href="">Hire Me</a>
-                <a class="btn" href="">Contact Me</a>
+               <div class="btn">
+              <a href="https://github.com/hiru2k"><i class="fab fa-github"></i></a>
+            </div>
+            <div class="btn">
+              <a href="https://web.facebook.com/anushika.siriwardena/"><i class="fab fa-facebook-f"></i></a>
+            </div>
+            <div class="btn">
+              <a href="https://www.hackerrank.com/profile/hiru2k"><i class="fab fa-hackerrank"></i></a>
               </div>
+              <div class="btn">
+              <a href="https://www.linkedin.com/in/hiruni-mudannayake-13a232244/"><i class="fab fa-linkedin-in"></i></a>
+              </div>
+              <div class="btn">
+              <a href="https://www.youtube.com/channel/UCDANmY9v-SB4lTmvCBlt4tA"><i class="fab fa-youtube"></i></a>
+              </div>
+              <div class="btn">
+                <a href="https://www.instagram.com/hirunimudannayak/"><i class="fab fa-instagram"></i></a>
+                </div>
+              </div>
+            
             </div>
           </div>
           <div class="col-sm-12 col-md-6 d-none d-md-block">
